# imc_dl_classifier

./: .gitignore  classifier.ipynb  main.py  pyproject.toml
checkpoints/: final_results.json
